# CMake

./: .gitmodules  readme.md
01/: CMakeLists.txt
02/: CMakeLists.txt
03/: CMakeLists.txt
04/: CMakeLists.txt
04/src/: CMakeLists.txt
05/: CMakeLists.txt
05/libhello/: CMakeLists.txt
06/libhello/: hello.h
06/src/: CMakeLists.txt
07/: CMakeLists.txt
07/SDK/lib/: hello.lib
07/libhello/: CMakeLists.txt  hello.c
07/src/: main.c
08/: CMakeLists.txt
08/libhello/: CMakeLists.txt  hello.h
08/src/: CMakeLists.txt
09/: CMakeLists.txt
09/src/: sqlite3.rc
10/: CMakeLists.txt
